config session, set up flash, flash success partial WIP

--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -2,7 +2,7 @@
 <div class="row">
     <h1 class="text-center">Edit Campground</h1>
     <div class="col-6 offset-3">
-        <form action="/campgrounds" method="POST" novalidate class="validated-form">
+        <form action="/campgrounds/<%=id%>?_method=PATCH" method="POST" novalidate class="validated-form">
             <div class="mb-3">
                 <label class="form-label" for="title">Title</label>
                 <input class="form-control" type="text" id="title" name="campground[title]" placeholder="title" value="<%= campground.title %>" required>
