--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -32,6 +32,7 @@
             </div>
         </div>
         <div class="col-6">
+            <% if(currentUser){ %> 
             <h2>Leave a Review</h2>
             <form action="/campgrounds/<%= campground._id %>/reviews" class="mb-3 validated-form" method="POST" novalidate>
                 <div class="mb-3">
@@ -45,6 +46,7 @@
                 </div>
                 <button class="btn btn-success">Submit</button>
             </form>
+            <% } %> 
             <% for (let review of campground.reviews) { %>
                 <div class="card mb-3">
                     <div class="card-body">
